# camera-monitor

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs  worker.rs
ui/: view.slint
