cargo-features = ["edition2024"]

[package]
name = "camera-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
slint = { git = "https://github.com/slint-ui/slint" }
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tokio-util = "0.7.11"
zune-jpeg = "0.4.11"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }
